tests/e2e/semantics/try_scope2.error
Error: syntax error in story at line 5, column 5

5|    c = b
          ^

E0101: Variable `b` has not been defined.
