tests/e2e/semantics/try_scope2.story
try
	a = 1
catch as e
	b = 1
c = b
